--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
-    <color name="textColorPrimary">#FF9f9f9f</color>
+    <color name="colorPrimary">#5082b5</color>
+    <color name="colorPrimaryDark">#000</color>
+    <color name="colorAccent">#e8edec</color>
+    <color name="textColorPrimary">#a9b0b0</color>
     <color name="textColorAccent">#FFFFFFFF</color>
 </resources>
