--- a/app/src/main/res/drawable/ic_school_black_24dp.xml
+++ b/app/src/main/res/drawable/ic_school_black_24dp.xml
@@ -1,5 +1,5 @@
 <vector android:alpha="0.92" android:height="22dp"
     android:viewportHeight="24.0" android:viewportWidth="24.0"
     android:width="22dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#a9b0b0" android:pathData="M20,2H4c-1.1,0 -2,0.9 -2,2v18l4,-4h14c1.1,0 2,-0.9 2,-2V4c0,-1.1 -0.9,-2 -2,-2z"/>
+    <path android:fillColor="#a9b0b0" android:pathData="M5,13.18v4L12,21l7,-3.82v-4L12,17l-7,-3.82zM12,3L1,9l11,6 9,-4.91V17h2V9L12,3z"/>
 </vector>
