--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,9 +34,9 @@
             <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/activity_horizontal_margin"
-                android:layout_marginBottom="@dimen/activity_horizontal_margin"
+                android:padding="@dimen/activity_horizontal_margin"
                 android:layout_gravity="bottom|right"
+                android:clickable="true"
                 android:background="?attr/selectableItemBackground"
                 app:srcCompat="@drawable/ic_party_mode_24dp"/>
 
@@ -48,6 +48,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
                 android:text="@string/online_str"
+                android:drawablePadding="2dp"
                 app:rightIcon="@drawable/ic_online_mobile"/>
 
             <android.support.v7.widget.Toolbar
