--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,7 +6,7 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:textSize">14sp</item>
-        <item name="android:textColor">@color/textColorPrimary</item>
+
     </style>
 
     <style name="AppThemeWhiteText" parent="AppTheme">
@@ -17,7 +17,29 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
 
+    <style name="VectorImageTextViewStyle" parent="TextAppearance.AppCompat">
+        <item name="android:paddingStart">16dp</item>
+        <item name="android:paddingEnd">16dp</item>
+        <item name="android:paddingTop">8dp</item>
+        <item name="android:paddingBottom">8dp</item>
+        <item name="android:textColor">@color/textColorPrimary</item>
+    </style>
 
+    <style name="VectorImageTextViewStyleClickable" parent="VectorImageTextViewStyle">
+        <item name="android:background">?attr/selectableItemBackground</item>
+        <item name="android:clickable">true</item>
+    </style>
+
+    <style name="VectorImageTextViewStyleClickableV2" parent="VectorImageTextViewStyleClickable">
+        <item name="android:paddingTop">16dp</item>
+        <item name="android:paddingBottom">16dp</item>
+        <item name="android:textColor">@color/colorPrimary</item>
+    </style>
+    <style name="CardViewStyle">
+        <item name="android:paddingTop">8dp</item>
+        <item name="android:paddingBottom">8dp</item>
+        <item name="android:background">@drawable/shadow_bg</item>
+    </style>
     <style name="CollapsedAppBar" parent="@android:style/TextAppearance.Medium">
         <item name="android:textSize">24sp</item>
         <item name="android:textStyle">normal</item>
