--- a/app/src/main/res/layout/activity_main_content.xml
+++ b/app/src/main/res/layout/activity_main_content.xml
@@ -7,10 +7,15 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="comalexpolyanskyi.github.hwflagslanuchmode.MainActivity"
-    tools:showIn="@layout/activity_main">
+    tools:showIn="@layout/activity_main_head">
     <RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        tools:context="comalexpolyanskyi.github.hwflagslanuchmode.MainActivity"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        tools:showIn="@layout/activity_main_head">
         <LinearLayout
             android:id="@+id/info"
             android:layout_width="match_parent"
