--- a/app/src/main/res/values/attr.xml
+++ b/app/src/main/res/values/attr.xml
@@ -1,5 +1,6 @@
 <resources>
 
+    <attr name="MyCustomAttrForMyCustomButton" format="reference"/>
     <attr name="icTextViewStyle" format="reference"/>
 
     <declare-styleable name="icTextViewStyle">
