--- a/app/src/main/res/layout/activity_main_content.xml
+++ b/app/src/main/res/layout/activity_main_content.xml
@@ -75,6 +75,7 @@
             style="@style/CardViewStyle"
             android:orientation="horizontal">
             <comalexpolyanskyi.github.hwflagslanuchmode.view.VectorImageTextView
+                android:id="@+id/messageBtn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
